syntax = "proto3";

package NUgc.NSchema;

message TSitemapChunk {
    // PK ID is base64 coded string: ABCD12345678
    string ChunkId = 1; // Key: 4 char prefix
    string Suffixes = 2; // Joined 8 char suffixes
}
